editor/test/resources/native_extension_error_parsing/missingSymbols_2.txt
clang++ -target x86_64-pc-win32-msvc -m64 -g -gcodeview -DDM_PLATFORM_WINDOWS -DLUA_BYTECODE_ENABLE -D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -D__STDC_LIMIT_MACROS -DWINVER=0x0600 -DWIN32  -O2 -Wall -Werror=format -fvisibility=hidden  -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/include -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/include -isystem /opt/platformsdk/Win32/WindowsKits/10/Include/10.0.10240.0/ucrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/winrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/um -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/shared  -Iupload/win32nativeext/include  -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//include -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//sdk/include  upload/win32nativeext/src/main.cpp -c -o build/main.cpp_0.o
upload/win32nativeext/src/main.cpp:30:9: warning: unused variable 'a' [-Wunused-variable]
    int a;
        ^
upload/win32nativeext/src/main.cpp:46:9: warning: unused variable 'b' [-Wunused-variable]
    int b = 100;
        ^
2 warnings generated.

clang++ -target x86_64-pc-win32-msvc -m64 -g -gcodeview -DDM_PLATFORM_WINDOWS -DLUA_BYTECODE_ENABLE -D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -D__STDC_LIMIT_MACROS -DWINVER=0x0600 -DWIN32  -O2 -Wall -Werror=format -fvisibility=hidden  -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/include -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/include -isystem /opt/platformsdk/Win32/WindowsKits/10/Include/10.0.10240.0/ucrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/winrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/um -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/shared  -Iupload/win32nativeext/include  -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//include -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//sdk/include  upload/win32nativeext/src/plopp.c -c -o build/plopp.c_1.o
clang-6.0: warning: treating 'c' input as 'c++' when in C++ mode, this behavior is deprecated [-Wdeprecated]

clang++ -target x86_64-pc-win32-msvc -m64 -g -gcodeview -DDM_PLATFORM_WINDOWS -DLUA_BYTECODE_ENABLE -D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -D__STDC_LIMIT_MACROS -DWINVER=0x0600 -DWIN32  -O2 -Wall -Werror=format -fvisibility=hidden  -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/include -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/include -isystem /opt/platformsdk/Win32/WindowsKits/10/Include/10.0.10240.0/ucrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/winrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/um -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/shared  -Iupload/win32nativeext/include  -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//include -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//sdk/include  upload/win32nativeext/src/other.cpp -c -o build/other.cpp_2.o

/usr/bin/ar rcs /tmp/job9118930637405257502/build/56f21653-b689-4e94-aa30-e784dbeb6768.lib build/main.cpp_0.o build/plopp.c_1.o build/other.cpp_2.o

clang++ -target x86_64-pc-win32-msvc -m64 -g -gcodeview -DDM_PLATFORM_WINDOWS -DLUA_BYTECODE_ENABLE -D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -D__STDC_LIMIT_MACROS -DWINVER=0x0600 -DWIN32  -O2 -Wall -Werror=format -fvisibility=hidden  -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/include -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/include -isystem /opt/platformsdk/Win32/WindowsKits/10/Include/10.0.10240.0/ucrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/winrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/um -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/shared  -Iupload/ext2/include  -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//include -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//sdk/include  upload/ext2/src/main.cpp -c -o build/main.cpp_0.o
upload/ext2/src/main.cpp:16:9: warning: unused variable 'a' [-Wunused-variable]
    int a;
        ^
1 warning generated.

/usr/bin/ar rcs /tmp/job9118930637405257502/build/303db952-ab0a-41b1-84b7-712107575eb4.lib build/main.cpp_0.o

windres -i /var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//lib/x86_64-win32/engine.rc -O coff -o build/dmengine.res

clang++ -target x86_64-pc-win32-msvc -m64 -g -gcodeview -DDM_PLATFORM_WINDOWS -DLUA_BYTECODE_ENABLE -D_CRT_SECURE_NO_WARNINGS -D_WINSOCK_DEPRECATED_NO_WARNINGS -D__STDC_LIMIT_MACROS -DWINVER=0x0600 -DWIN32  -O2 -Wall -Werror=format -fvisibility=hidden  -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/include -isystem /opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/include -isystem /opt/platformsdk/Win32/WindowsKits/10/Include/10.0.10240.0/ucrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/winrt -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/um -isystem /opt/platformsdk/Win32/WindowsKits/8.1/Include/shared   -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//include -I/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//sdk/include  build/main.cpp -c -o build/main_tmp28e41a0f-6125-4c4d-af5f-62b658b1ff3e.o

clang++ -target x86_64-pc-win32-msvc -m64 -g -o build/dmengine.exe -O2 -fuse-ld=lld  -L/tmp/job9118930637405257502/build  -lOpenGL32 -lDelayimp -lUser32 -lshell32 -lXinput9_1_0 -lOpenAL32 -lWS2_32 -lIPHlpApi -lDbgHelp -lplopp  -l303db952-ab0a-41b1-84b7-712107575eb4 -l56f21653-b689-4e94-aa30-e784dbeb6768  -L/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//lib/x86_64-win32 -L/var/extender/sdk/851fbeb469987908d2b785fa3964003acc919394/defoldsdk//ext/lib/x86_64-win32 -L/opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/lib/amd64 -L/opt/platformsdk/Win32/MicrosoftVisualStudio14.0/VC/atlmfc/lib/amd64 -L/opt/platformsdk/Win32/WindowsKits/10/Lib/10.0.10240.0/ucrt/x64 -L/opt/platformsdk/Win32/WindowsKits/8.1/Lib/winv6.3/um/x64  -llibengine -llibengine_service -llibaxtls -llibwebviewext -llibprofilerext -llibfacebookext -llibiapext -llibpushext -llibiacext -llibrecord -llibgameobject -llibddf -llibresource -llibgamesys -llibgraphics -llibphysics -llibBulletDynamics -llibBulletCollision -llibLinearMath -llibBox2D -llibrender -llibscript -llibluajit-5.1 -llibextension -llibhid -llibinput -llibparticle -llibrig -llibdlib -llibdmglfw -llibgui -llibtracking -llibcrashext -llibliveupdate -llibsound -lvpx -llibFBGPlatform  build/main_tmp28e41a0f-6125-4c4d-af5f-62b658b1ff3e.o build/dmengine.res
/usr/local/bin/lld-link: error: could not open plopp.lib: No such file or directory
clang-6.0: error: linker command failed with exit code 1 (use -v to see invocation)

